--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,70 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #0f7b47;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.about-us {
+  @apply flex flex-col items-center justify-center;
+}
+
+.header {
+  font-size: xx-large;
+  padding: 10px;
+  background-color: #fffbff;
+  color: #0f7b47;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.gang-picture {
+  @apply w-1/4;
+  margin: 0px 10px 10px 10px;
+  padding: 10px;
+  background-color: #fffbff;
+  color: #0f7b47;
+  border-radius: 0.375rem;
+}
+
+.text {
+  width: 50%;
+  background-color: #fffbff;
+  color: #0f7b47;
+  border-radius: 0.375rem;
+  padding: 10px;
+}
+
+.navbar-container {
+  width: 100%;
+  background-color: #fffbff;
+}
+
+.navbar ul {
+  list-style-type: none;
+  background-color: #fffbff;
+  padding: 0px;
+  margin: 0px;
+  overflow: hidden;
+}
+
+.navbar a {
+  color: black;
+  text-decoration: none;
+  padding: 15px;
+  display: block;
+  text-align: center;
+}
+
+.navbar a:hover {
+  background-color: #0f7b47;
+}
+
+.navbar li {
+  float: left;
+}
+
+.navbar img {
+  width: 2.5%;
 }
